--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,110 @@
-/* место для вашего кода */
+body {
+    background-color: #fff;
+}
+
+.header {
+    display: grid;
+    grid-template-columns: 1fr min-content 1fr;
+    align-items: center;
+    padding: 92px 50px 96px;
+}
+
+.header__menu-list {
+    display: flex;
+    gap: 30px;
+}
+
+.header__menu-item {
+    list-style: circle;    
+}
+
+.header__menu-link-activ {
+    list-style: none;
+    text-decoration: none;
+}
+
+.menu-link {
+    text-underline-offset: 4px;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.header__logo {
+    display: block;
+    width: 148px;
+    height: 105px;
+}
+
+.header__logo-image {
+    width: 100%;
+    height: 100%;
+}
+
+.contacts {
+    max-width: 240px;
+    justify-self: end;
+    font-style: normal;
+    line-height: 1.35;
+}
+
+.contacts__list {
+    list-style: none;
+}
+
+.cover {
+    position: relative;
+    min-height: 757px;
+    padding: 165px 20px 50px 50px;
+    background-image: url(../images/cover.jpg);
+    background-repeat: no-repeat;
+    background-position: top ;
+    background-size: 125%;
+}
+
+.overlay {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 0.5);
+}
+
+.lots {
+    padding: 0px 24px;
+}
+
+.cover-title {
+    position: relative;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    gap: 17px;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 100px;
+    font-weight: 700;
+    letter-spacing: 30px;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.text-right {
+    padding: 0;
+    text-align: right;
+}
+
+.about{
+    padding: 0 24px;
+}
+
+.footer {
+    padding: 0 50px;
+}
