--- a/styles/style.css
+++ b/styles/style.css
@@ -1,110 +1,326 @@
 body {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 .header {
-    display: grid;
-    grid-template-columns: 1fr min-content 1fr;
-    align-items: center;
-    padding: 92px 50px 96px;
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  padding: 92px 50px 96px;
 }
 
 .header__menu-list {
-    display: flex;
-    gap: 30px;
+  display: flex;
+  gap: 27px;
 }
 
 .header__menu-item {
-    list-style: circle;    
+  list-style: circle;
+  list-style-position: outside;
 }
 
-.header__menu-link-activ {
-    list-style: none;
-    text-decoration: none;
+.menu-link-shift {
+  margin-right: 2px;
+  margin-left: 5px;
 }
 
 .menu-link {
-    text-underline-offset: 4px;
-    font-size: 18px;
-    font-weight: 400;
+  font-weight: 400;
+  font-size: 18px;
+  text-decoration: underline solid 1px;
+  text-underline-offset: 3.5px;
+}
+
+.menu-link-activ {
+  text-decoration: none;
+  list-style: none;
 }
 
 .header__logo {
-    display: block;
-    width: 148px;
-    height: 105px;
+  display: block;
+  width: 148px;
+  height: 105px;
 }
 
 .header__logo-image {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+.header__contacts {
+  justify-self: end;
 }
 
 .contacts {
-    max-width: 240px;
-    justify-self: end;
-    font-style: normal;
-    line-height: 1.35;
+  max-width: 240px;
+  font-style: normal;
+  line-height: 1.35;
 }
 
 .contacts__list {
-    list-style: none;
+  list-style: none;
 }
 
 .cover {
-    position: relative;
-    min-height: 757px;
-    padding: 165px 20px 50px 50px;
-    background-image: url(../images/cover.jpg);
-    background-repeat: no-repeat;
-    background-position: top ;
-    background-size: 125%;
+  position: relative;
+  z-index: -2;
+  min-height: 757px;
+  padding: 164px 50px 0px 50px;
+  background-image: url(../images/cover.jpg);
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
 }
 
 .overlay {
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0 0 0 / 0.5);
-}
-
-.lots {
-    padding: 0px 24px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 0.6);
 }
 
 .cover-title {
-    position: relative;
-    z-index: 2;
-    display: flex;
-    flex-direction: column;
-    gap: 17px;
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 100px;
-    font-weight: 700;
-    letter-spacing: 30px;
+  position: relative;
+  color: #fff;
+  font-weight: 700;
+  font-size: 100px;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+}
+
+.cover__title-item {
+  display: block;
 }
 
 .text-left {
-    text-align: left;
+  text-align: left;
 }
 
 .text-center {
-    text-align: center;
+  line-height: 1.54;
+  text-align: center;
 }
 
 .text-right {
-    padding: 0;
-    text-align: right;
+  line-height: 1.15;
+  text-align: right;
 }
 
-.about{
-    padding: 0 24px;
+.none_letter-spacing {
+  letter-spacing: 0;
+}
+
+.description {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 106px;
+}
+
+.cover__description-slogan {
+  color: #fff;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 1;
+  text-transform: uppercase;
+  word-spacing: 20px;
+}
+
+.cover__description__slogan-selection {
+  word-spacing: 18px;
+}
+
+.cover__description-start {
+  width: 256px;
+  height: 51px;
+  border: 1px solid #fff;
+  padding: 11px 31px;
+  color: #fff;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 1;
+  text-transform: uppercase;
+  background-color: transparent;
+}
+
+.lots {
+  margin: 184px 0 125px 0;
+  padding: 0px 24px;
+}
+
+.lots-title {
+  padding: 0px 40px 30px;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1;
+  text-transform: uppercase;
+  word-spacing: 20px;
+}
+
+.lots-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 25px;
+  list-style: none;
+}
+
+.lots__card {
+  min-width: 334px;
+  min-height: 596px;
+}
+
+.card-link {
+  height: 100%;
+}
+
+.lots-card-movie {
+  position: relative;
+  z-index: -2;
+  background-image: url(../images/card-lot-01.jpg);
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+}
+
+.lots-card-book {
+  position: relative;
+  z-index: -2;
+  background-image: url(../images/card-lot-02.jpg);
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+}
+
+.lots-card-painting {
+  position: relative;
+  z-index: -2;
+  background-image: url(../images/card-lot-03.jpg);
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+}
+
+.card {
+  height: 100%;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 48px 40px;
+  color: #fff;
+}
+
+.card__title {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 1.19;
+  text-decoration: underline solid 1px;
+  text-underline-offset: 3px;
+  text-transform: uppercase;
+}
+
+.card__item {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.2;
+}
+
+.link-full-list {
+  display: block;
+  padding: 30px 40px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.2;
+  text-decoration: underline solid 1px;
+  text-underline-offset: 5px;
+}
+
+.about {
+  display: grid;
+  grid-template-columns: 334px auto;
+  grid-template-areas:
+    "about-logo about__list-title"
+    ". about__list-main";
+  row-gap: 7px;
+  column-gap: 25px;
+  padding: 0 24px 71px;
+}
+
+.about-logo {
+  display: flex;
+  grid-area: about-logo;
+  justify-self: center;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  background-color: black;
+}
+
+.about__logo-img {
+  width: 148px;
+  height: 114px;
+}
+
+.about__list-title {
+  grid-area: about__list-title;
+  align-self: center;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1;
+  text-transform: uppercase;
+}
+
+.about__list-main {
+  grid-area: about__list-main;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.2;
+}
+
+.about__list-item {
+  margin-bottom: 24px;
 }
 
 .footer {
-    padding: 0 50px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  min-height: 180px;
+  margin: 110px 0 0;
+  padding: 0 50px;
+}
+
+.footer__contacts {
+  align-self: start;
+}
+
+.footer-nav {
+  display: flex;
+  justify-self: center;
+  align-self: start;
+}
+
+.footer-nav__list {
+  list-style: none;
+  text-align-last: center;
+}
+
+.footer__social-list {
+  display: flex;
+  justify-self: end;
+  gap: 48px;
+  align-self: start;
+  list-style: none;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
 }
