--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,11 @@
-body {
-  background-color: #fff;
-}
-
 .header {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  padding: 92px 50px 96px;
+  margin: 44px 0 47px;
+  padding: 48px 50px;
+  font-weight: 400;
+  font-size: 18px;
 }
 
 .header__menu-list {
@@ -20,19 +19,20 @@ body {
 }
 
 .menu-link-shift {
-  margin-right: 2px;
+  margin-right: 3px;
   margin-left: 5px;
 }
 
-.menu-link {
-  font-weight: 400;
-  font-size: 18px;
+.underline {
   text-decoration: underline solid 1px;
   text-underline-offset: 3.5px;
 }
 
 .menu-link-activ {
   text-decoration: none;
+}
+
+.none-list-style {
   list-style: none;
 }
 
@@ -53,23 +53,17 @@ body {
 }
 
 .contacts {
-  max-width: 240px;
   font-style: normal;
   line-height: 1.35;
 }
 
-.contacts__list {
-  list-style: none;
-}
-
 .cover {
   position: relative;
-  z-index: -2;
   min-height: 757px;
-  padding: 164px 50px 0px 50px;
+  padding: 165px 50px 0px 50px;
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
-  background-position: top;
+  background-position: center;
   background-size: cover;
 }
 
@@ -77,7 +71,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: -1;
+  z-index: 1;
   width: 100%;
   height: 100%;
   background-color: rgb(0 0 0 / 0.6);
@@ -85,6 +79,7 @@ body {
 
 .cover-title {
   position: relative;
+  z-index: 2;
   color: #fff;
   font-weight: 700;
   font-size: 100px;
@@ -115,6 +110,8 @@ body {
 }
 
 .description {
+  position: relative;
+  z-index: 2;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -136,19 +133,19 @@ body {
 
 .cover__description-start {
   width: 256px;
-  height: 51px;
+  min-height: 50px;
   border: 1px solid #fff;
-  padding: 11px 31px;
   color: #fff;
   font-weight: 400;
   font-size: 22px;
   line-height: 1;
   text-transform: uppercase;
   background-color: transparent;
+  cursor: pointer;
 }
 
 .lots {
-  margin: 184px 0 125px 0;
+  margin: 185px 0 125px;
   padding: 0px 24px;
 }
 
@@ -162,49 +159,43 @@ body {
 }
 
 .lots-list {
+  z-index: 2;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   gap: 25px;
-  list-style: none;
+  width: 1052px;
 }
 
 .lots__card {
-  min-width: 334px;
-  min-height: 596px;
+  position: relative;
+  width: 334px;
+  height: 596px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .card-link {
   height: 100%;
+  text-decoration: none;
 }
 
 .lots-card-movie {
-  position: relative;
-  z-index: -2;
   background-image: url(../images/card-lot-01.jpg);
-  background-repeat: no-repeat;
-  background-position: top;
-  background-size: cover;
 }
 
 .lots-card-book {
-  position: relative;
-  z-index: -2;
   background-image: url(../images/card-lot-02.jpg);
-  background-repeat: no-repeat;
-  background-position: top;
-  background-size: cover;
 }
 
 .lots-card-painting {
-  position: relative;
-  z-index: -2;
   background-image: url(../images/card-lot-03.jpg);
-  background-repeat: no-repeat;
-  background-position: top;
-  background-size: cover;
 }
 
 .card {
+  position: relative;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -269,6 +260,7 @@ body {
 .about__list-title {
   grid-area: about__list-title;
   align-self: center;
+  padding-top: 10px;
   font-weight: 700;
   font-size: 40px;
   line-height: 1;
@@ -276,46 +268,41 @@ body {
 }
 
 .about__list-main {
+  display: flex;
+  flex-direction: column;
   grid-area: about__list-main;
+  gap: 24px;
   font-weight: 400;
   font-size: 20px;
   line-height: 1.2;
-}
-
-.about__list-item {
-  margin-bottom: 24px;
 }
 
 .footer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
-  min-height: 180px;
-  margin: 110px 0 0;
+  margin: 110px 0;
   padding: 0 50px;
+  font-weight: 400;
+  font-size: 18px;
 }
 
-.footer__contacts {
-  align-self: start;
-}
+
 
 .footer-nav {
   display: flex;
   justify-self: center;
   align-self: start;
-}
-
-.footer-nav__list {
-  list-style: none;
   text-align-last: center;
 }
+
+
 
 .footer__social-list {
   display: flex;
   justify-self: end;
   gap: 48px;
   align-self: start;
-  list-style: none;
 }
 
 .footer__social-icon {
